{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 116,
  "lineage": "5948de40-b6d2-0a26-b409-819b890d7fba",
  "resources": [
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458580845911:security-group/sg-058ce3a62561d5c75",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-058ce3a62561d5c75",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d110913925619d9e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "458580845911",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2bbe33049976b56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458580845911",
            "id": "sg-058ce3a62561d5c75",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ecs.aws_security_group.ecs_sg",
            "module.ecs.aws_security_group.lb_sg",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:458580845911:loadbalancer/app/api-alb/19512c55c357027e",
            "arn_suffix": "app/api-alb/19512c55c357027e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "api-alb-1269839128.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:458580845911:loadbalancer/app/api-alb/19512c55c357027e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "api-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-06e82c821a951a9ac"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-034d5ee5e5a87fb0b"
              },
              {
                "subnet_id": "subnet-079eb660d42af4a85"
              }
            ],
            "subnets": [
              "subnet-034d5ee5e5a87fb0b",
              "subnet-079eb660d42af4a85"
            ],
            "vpc_id": "vpc-0f2bbe33049976b56",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:458580845911:loadbalancer/app/api-alb/19512c55c357027e"
          },
          "dependencies": [
            "module.ecs.aws_security_group.lb_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458580845911:security-group/sg-0d110913925619d9e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d110913925619d9e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e82c821a951a9ac"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "458580845911",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2bbe33049976b56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458580845911",
            "id": "sg-0d110913925619d9e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ecs.aws_security_group.lb_sg",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458580845911:security-group/sg-06e82c821a951a9ac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e82c821a951a9ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "458580845911",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2bbe33049976b56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458580845911",
            "id": "sg-06e82c821a951a9ac",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458580845911:internet-gateway/igw-02392592a5ba60a19",
            "id": "igw-02392592a5ba60a19",
            "owner_id": "458580845911",
            "region": "us-east-1",
            "vpc_id": "vpc-0f2bbe33049976b56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458580845911:route-table/rtb-0f15b992ddbda7ef3",
            "id": "rtb-0f15b992ddbda7ef3",
            "owner_id": "458580845911",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02392592a5ba60a19",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2bbe33049976b56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458580845911",
            "id": "rtb-0f15b992ddbda7ef3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021458e21d90bf556",
            "region": "us-east-1",
            "route_table_id": "rtb-0f15b992ddbda7ef3",
            "subnet_id": "subnet-034d5ee5e5a87fb0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458580845911",
            "id": "rtbassoc-021458e21d90bf556",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001d9453b75ce92b9",
            "region": "us-east-1",
            "route_table_id": "rtb-0f15b992ddbda7ef3",
            "subnet_id": "subnet-079eb660d42af4a85"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458580845911",
            "id": "rtbassoc-001d9453b75ce92b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458580845911:subnet/subnet-03f825b7bc2508c8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f825b7bc2508c8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458580845911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-private-0"
            },
            "tags_all": {
              "Name": "subnet-private-0"
            },
            "vpc_id": "vpc-0f2bbe33049976b56"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458580845911",
            "id": "subnet-03f825b7bc2508c8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458580845911:subnet/subnet-0d04c89aa1367b5ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04c89aa1367b5ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458580845911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-private-1"
            },
            "tags_all": {
              "Name": "subnet-private-1"
            },
            "vpc_id": "vpc-0f2bbe33049976b56"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458580845911",
            "id": "subnet-0d04c89aa1367b5ed",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458580845911:subnet/subnet-034d5ee5e5a87fb0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034d5ee5e5a87fb0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458580845911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-public-0"
            },
            "tags_all": {
              "Name": "subnet-public-0"
            },
            "vpc_id": "vpc-0f2bbe33049976b56"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458580845911",
            "id": "subnet-034d5ee5e5a87fb0b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458580845911:subnet/subnet-079eb660d42af4a85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079eb660d42af4a85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458580845911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-public-1"
            },
            "tags_all": {
              "Name": "subnet-public-1"
            },
            "vpc_id": "vpc-0f2bbe33049976b56"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458580845911",
            "id": "subnet-079eb660d42af4a85",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:458580845911:vpc/vpc-0f2bbe33049976b56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036f899744bf6e7df",
            "default_route_table_id": "rtb-0c6bb2b2b82fc70af",
            "default_security_group_id": "sg-02229da1b6fe27344",
            "dhcp_options_id": "dopt-00495c976ebe64219",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f2bbe33049976b56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6bb2b2b82fc70af",
            "owner_id": "458580845911",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-api"
            },
            "tags_all": {
              "Name": "vpc-api"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458580845911",
            "id": "vpc-0f2bbe33049976b56",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}